# marlin-binary-protocol

./: pyproject.toml
binproto2/: protocols.py
marlin_binary_protocol/binproto2/: protocols.py
