[project]
name = "marlin-binary-protocol"
version = "0.0.7"
description = "Transfer files with Marlin 2.0 firmware using Marlin Binary Protocol Mark II"
authors = [
    {name = "Manuel Bourgault",email = "manu.bou333@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "heatshrink2 (>=0.14.0,<0.15.0)",
    "pyserial (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
